2010-11-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/www_funcs.c (build_encode_URL): Addressed yet another compiler
	warning. Call inet_ntop () with a proper in_addr pointer instead of
	trying to cast a uint32_t to it.

2010-11-17  Preeti Subramanian <spreeti@secpod.com>

	* misc/ids_send.c (open_sock_tcp): Addressed compiler warnings.
	Changed src6 to instance of structure in6_addr.

2010-11-17  Michael Wiegand <michael.wiegand@greenbone.net>

	Addressed more 64 bit compiler warnings.

	* misc/openvas_server.c (openvas_server_send): Cast argument to int
	when using it to specify field precision.

	* omp/xml.c (read_entity_and_string): Cast argument to int
	when using it to specify field precision.

2010-11-17  Michael Wiegand <michael.wiegand@greenbone.net>

	Addressed two 64 bit compiler warnings.

	* misc/openvas_server.c (openvas_server_send): Use %zu for size_t.

	* omp/xml.c (read_entity_and_string): Cast to match format string.

2010-11-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_func.c (qsortcmp): Added this typedef to allow proper cast.
	(insert_nasl_func): Apply cast to qsortcmp for strcmp used in qsort.

2010-11-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/bpf_share.c (bpf_open_live): Lowered limit of for-loop by 1
	because currently it would exceed the fixed field size.
	This is just from reading the code and because we got a compiler
	warning "array subscript is above array bounds". It is unclear
	how or whether there is any positive effect in practice at all.

2010-11-16  Michael Wiegand <michael.wiegand@greenbone.net>

	Addressed compiler warnings regarding uninitialized variables and
	unused functions.

	* nasl/nasl_packet_forgery_v6.c (forge_icmp_v6_packet): Make sure
	routersolicit, routeradvert, neighborsolicit and neighboradvert are
	initialized before use.

	* hg/hg_add_hosts.c (hg_add_ipv6host_with_options): Addressed TODO,
	ensure c_hostname is initialized before use.
