@@ -1,5 +1,11 @@
 2010-11-17  Michael Wiegand <michael.wiegand@greenbone.net>
 
+	* hg/CMakeLists.txt, misc/CMakeLists.txt, nasl/CMakeLists.txt,
+	omp/CMakeLists.txt: Add -Werror to compiler flags so that compiler
+	warnings are now treated as errors.
+
+2010-11-17  Michael Wiegand <michael.wiegand@greenbone.net>
+
 	* misc/www_funcs.c (build_encode_URL): Addressed yet another compiler
 	warning. Call inet_ntop () with a proper in_addr pointer instead of
 	trying to cast a uint32_t to it.
